[gd_scene load_steps=27 format=2]

[ext_resource path="res://Assets/clock.png" type="Texture" id=1]
[ext_resource path="res://Assets/aguja.png" type="Texture" id=2]
[ext_resource path="res://Assets/runescape_uf.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://ClockMinigame.gd" type="Script" id=4]
[ext_resource path="res://Assets/audio clock.mp3" type="AudioStream" id=5]

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.145098, 0.145098, 0.145098, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="DynamicFont" id=7]
size = 12
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=1]
size = 15
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_top = 2
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 0.717647, 0, 0, 1 )
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6
shadow_size = 1
shadow_offset = Vector2( 1, 1 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.996078, 0.533333, 0.533333, 1 )
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6
shadow_size = 1
shadow_offset = Vector2( 1.2, 1.2 )

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 1, 0, 0, 1 )
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6
shadow_size = 1
shadow_offset = Vector2( 1, 1 )

[sub_resource type="DynamicFont" id=2]
size = 12
extra_spacing_top = 2
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 0, 0.580392, 0, 1 )
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6
shadow_size = 1
shadow_offset = Vector2( 1, 1 )

[sub_resource type="StyleBoxFlat" id=14]
bg_color = Color( 0.470588, 1, 0.470588, 1 )
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6
shadow_size = 1
shadow_offset = Vector2( 1.2, 1.2 )

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0.219608, 1, 0, 1 )
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6
shadow_size = 1
shadow_offset = Vector2( 1, 1 )

[sub_resource type="DynamicFont" id=8]
size = 12
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 15
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_top = 2
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=15]
bg_color = Color( 0.717647, 0, 0, 1 )
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6
shadow_size = 1
shadow_offset = Vector2( 1, 1 )

[sub_resource type="StyleBoxFlat" id=16]
bg_color = Color( 0.996078, 0.533333, 0.533333, 1 )
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6
shadow_size = 1
shadow_offset = Vector2( 1.2, 1.2 )

[sub_resource type="StyleBoxFlat" id=17]
bg_color = Color( 1, 0, 0, 1 )
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6
shadow_size = 1
shadow_offset = Vector2( 1, 1 )

[sub_resource type="DynamicFont" id=4]
size = 12
extra_spacing_top = 2
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=18]
bg_color = Color( 0, 0.580392, 0, 1 )
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6
shadow_size = 1
shadow_offset = Vector2( 1, 1 )

[sub_resource type="StyleBoxFlat" id=19]
bg_color = Color( 0.470588, 1, 0.470588, 1 )
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6
shadow_size = 1
shadow_offset = Vector2( 1.2, 1.2 )

[sub_resource type="StyleBoxFlat" id=20]
bg_color = Color( 0.219608, 1, 0, 1 )
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6
shadow_size = 1
shadow_offset = Vector2( 1, 1 )

[sub_resource type="DynamicFont" id=6]
size = 9
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=21]
font_data = ExtResource( 3 )

[node name="ClockMinigame" type="CanvasLayer"]
script = ExtResource( 4 )

[node name="Panel" type="Panel" parent="."]
margin_left = 78.0
margin_top = 12.0
margin_right = 238.0
margin_bottom = 172.0
custom_styles/panel = SubResource( 5 )

[node name="ClockRoot" type="Node2D" parent="Panel"]
position = Vector2( 6, 1 )

[node name="ClockBase" type="Sprite" parent="Panel/ClockRoot"]
position = Vector2( 71.875, 50.0694 )
scale = Vector2( 4.09722, 4.09722 )
texture = ExtResource( 1 )

[node name="TargetMinutePivot" type="Node2D" parent="Panel/ClockRoot"]
position = Vector2( 72.875, 66.599 )

[node name="TargetMinute" type="Sprite" parent="Panel/ClockRoot/TargetMinutePivot"]
modulate = Color( 1, 0, 0, 0.0588235 )
rotation = 1.5708
scale = Vector2( 0.059365, 0.0640244 )
texture = ExtResource( 2 )
offset = Vector2( 118.885, 0 )

[node name="TargetHourPivot" type="Node2D" parent="Panel/ClockRoot"]
position = Vector2( 72.875, 66.362 )

[node name="TargetHour" type="Sprite" parent="Panel/ClockRoot/TargetHourPivot"]
modulate = Color( 1, 0, 0, 0.0588235 )
rotation = 1.5708
scale = Vector2( 0.0401938, 0.0599868 )
texture = ExtResource( 2 )
offset = Vector2( 119.037, 0 )

[node name="MinutePivot" type="Node2D" parent="Panel/ClockRoot"]
position = Vector2( 72.875, 66.5994 )

[node name="MinuteHand" type="Sprite" parent="Panel/ClockRoot/MinutePivot"]
rotation = 1.5708
scale = Vector2( 0.0599329, 0.0638042 )
texture = ExtResource( 2 )
offset = Vector2( 118.885, 0 )

[node name="HourPivot" type="Node2D" parent="Panel/ClockRoot"]
position = Vector2( 72.875, 66.3624 )

[node name="HourHand" type="Sprite" parent="Panel/ClockRoot/HourPivot"]
rotation = 1.5708
scale = Vector2( 0.0398934, 0.0642528 )
texture = ExtResource( 2 )
offset = Vector2( 119.037, 0 )

[node name="TextHour" type="Label" parent="Panel"]
margin_left = 1.991
margin_top = 94.361
margin_right = 41.991
margin_bottom = 108.361
custom_fonts/font = SubResource( 7 )
text = "Hora"
align = 1
valign = 1
uppercase = true

[node name="BtnHourMinus" type="Button" parent="Panel"]
margin_left = 17.0
margin_top = 108.0
margin_right = 37.0
margin_bottom = 128.0
rect_min_size = Vector2( 20, 20 )
custom_fonts/font = SubResource( 1 )
custom_styles/hover = SubResource( 12 )
custom_styles/pressed = SubResource( 9 )
custom_styles/normal = SubResource( 10 )
action_mode = 0
text = "-"

[node name="BtnHourPlus" type="Button" parent="Panel"]
margin_left = 42.0
margin_top = 108.0
margin_right = 62.0
margin_bottom = 128.0
rect_min_size = Vector2( 20, 20 )
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 13 )
custom_styles/pressed = SubResource( 14 )
custom_styles/normal = SubResource( 11 )
action_mode = 0
text = "+"
icon_align = 1

[node name="TextMinute" type="Label" parent="Panel"]
margin_left = 115.023
margin_top = 95.0
margin_right = 155.023
margin_bottom = 108.0
custom_fonts/font = SubResource( 8 )
text = "Minuts"
align = 1
valign = 1
uppercase = true

[node name="BtnMinMinus" type="Button" parent="Panel"]
margin_left = 96.0
margin_top = 109.0
margin_right = 116.0
margin_bottom = 129.0
rect_min_size = Vector2( 20, 20 )
custom_fonts/font = SubResource( 3 )
custom_styles/hover = SubResource( 15 )
custom_styles/pressed = SubResource( 16 )
custom_styles/normal = SubResource( 17 )
action_mode = 0
text = "-"

[node name="BtnMinPlus" type="Button" parent="Panel"]
margin_left = 121.0
margin_top = 109.0
margin_right = 141.0
margin_bottom = 129.0
rect_min_size = Vector2( 20, 20 )
custom_fonts/font = SubResource( 4 )
custom_styles/hover = SubResource( 18 )
custom_styles/pressed = SubResource( 19 )
custom_styles/normal = SubResource( 20 )
action_mode = 0
text = "+"

[node name="Hint" type="Label" parent="Panel"]
margin_left = 6.0
margin_top = 134.0
margin_right = 152.0
margin_bottom = 157.0
custom_fonts/font = SubResource( 6 )
text = "Una agulla ha d'estar a :45 i l'altre
entre les 4 i les 5"
align = 1
valign = 1
uppercase = true

[node name="HintTimer" type="Timer" parent="Panel"]
wait_time = 100.0
one_shot = true
autostart = true

[node name="SuccessSfx" type="AudioStreamPlayer" parent="Panel"]
stream = ExtResource( 5 )
volume_db = -16.095

[node name="BtnCancel" type="Button" parent="Panel"]
margin_left = 115.0
margin_top = -1.0
margin_right = 162.0
margin_bottom = 21.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.827451, 0.827451, 0.827451, 1 )
custom_colors/font_color_pressed = Color( 0.635294, 0.635294, 0.635294, 1 )
custom_fonts/font = SubResource( 21 )
action_mode = 0
text = "Sortir"
flat = true
icon_align = 1
